--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                 <div class="beam"></div>
                 <div class="patient-table"></div>
             </div>
-            <button id="start-animation-btn" style="margin-top: 1.5rem;">Start Simulation</button>
+            <button id="start-animation-btn" style="margin-top: 1.5rem;">Start Treatment Simulation</button>
         </div>
         <section id="contact">
             <h2>Contact Us</h2>
