--- a/index.html
+++ b/index.html
@@ -466,67 +466,89 @@
     </header>
 
     <div class="container">
-        <section id="about">
-            <h2>About Us</h2>
-            <p>samRad Health Technologies is a visionary cancer research and healthtech enterprise. Our mission is to pioneer intelligent, automated systems that empower clinicians to detect and quantify tumors from radiological imaging with precision and ease. Our AI pipelines are open, transparent, and designed to speed up diagnostics and enhance medical research.</p>
-            <p>Founded by *** B. ****, a Zimbabwean PhD student in Physics at the University of NH in the United States, the initiative is rooted in a passion for oncology and a heartfelt commitment to expanding access to care. Coming from a background marked by economic hardship and limited access to advanced healthcare, **** has firsthand experience of the challenges faced by most African communities.</p>
-            <p>Through resilience and a relentless pursuit of education, he now seeks to transform lives&mdash;not just through innovation, but by creating pathways for others from similar circumstances. samRad Health Technologies aspires to forge partnerships with hospitals across Zimbabwe and Southern Africa, uplifting cancer care through technological excellence and shared knowledge.</p>
-        </section>
+       <section id="about" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md">
+    <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-4xl font-extrabold mb-6">About Us</h2>
+        <p class="text-lg leading-relaxed mb-4">samRad Health Technologies is a visionary cancer research and healthtech enterprise. Our mission is to pioneer intelligent, automated systems that empower clinicians to detect and quantify tumors from radiological imaging with precision and ease. Our AI pipelines are open, transparent, and designed to speed up diagnostics and enhance medical research.</p>
+        <p class="text-lg leading-relaxed mb-4">Founded by <strong>Founder First Name</strong> B. <strong>Founder Last Name</strong>, a Zimbabwean PhD student in Physics at the University of NH in the United States, the initiative is rooted in a passion for oncology and a heartfelt commitment to expanding access to care. Coming from a background marked by economic hardship and limited access to advanced healthcare, <strong>Founder Last Name</strong> has firsthand experience of the challenges faced by most African communities.</p>
+        <p class="text-lg leading-relaxed mb-4">Through resilience and a relentless pursuit of education, he now seeks to transform lives&mdash;not just through innovation, but by creating pathways for others from similar circumstances. samRad Health Technologies aspires to forge partnerships with hospitals across Zimbabwe and Southern Africa, uplifting cancer care through technological excellence and shared knowledge.</p>
+    </div>
+</section>
 
-        <section id="services">
-            <h2>Our Services</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <h3>AI Tumor Detection</h3>
-                    <p>Instant analysis of medical scan images (DICOM) to assess cancer risk using trained AI models.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Clinical Pipeline Tooling</h3>
-                    <p>Command-line tools for clinical researchers to process imaging data and patient datasets efficiently at scale.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Data Integration & Interoperability</h3>
-                    <p>Robust support for structured CSV metadata, clinical tagging, and export-ready research formats. Seamlessly integrate with existing hospital systems.</p>
-                </div>
+
+        <section id="about" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md">
+    <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-4xl font-extrabold mb-6">About Us</h2>
+        <p class="text-lg leading-relaxed mb-4">samRad Health Technologies is a visionary cancer research and healthtech enterprise. Our mission is to pioneer intelligent, automated systems that empower clinicians to detect and quantify tumors from radiological imaging with precision and ease. Our AI pipelines are open, transparent, and designed to speed up diagnostics and enhance medical research.</p>
+        <p class="text-lg leading-relaxed mb-4">Founded by <strong>Founder First Name</strong> B. <strong>Founder Last Name</strong>, a Zimbabwean PhD student in Physics at the University of NH in the United States, the initiative is rooted in a passion for oncology and a heartfelt commitment to expanding access to care. Coming from a background marked by economic hardship and limited access to advanced healthcare, <strong>Founder Last Name</strong> has firsthand experience of the challenges faced by most African communities.</p>
+        <p class="text-lg leading-relaxed mb-4">Through resilience and a relentless pursuit of education, he now seeks to transform lives&mdash;not just through innovation, but by creating pathways for others from similar circumstances. samRad Health Technologies aspires to forge partnerships with hospitals across Zimbabwe and Southern Africa, uplifting cancer care through technological excellence and shared knowledge.</p>
+    </div>
+</section>
+
+<section id="services" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900 rounded-lg shadow-md mt-8">
+    <div class="max-w-6xl mx-auto text-center">
+        <h2 class="text-4xl font-extrabold mb-8">Our Services</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="service-card bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300">
+                <h3 class="text-2xl font-bold mb-3">AI Tumor Detection</h3>
+                <p class="text-gray-600 dark:text-gray-300">Instant analysis of medical scan images (DICOM) to assess cancer risk using trained AI models.</p>
             </div>
-        </section>
+            <div class="service-card bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300">
+                <h3 class="text-2xl font-bold mb-3">Clinical Pipeline Tooling</h3>
+                <p class="text-gray-600 dark:text-gray-300">Command-line tools for clinical researchers to process imaging data and patient datasets efficiently at scale.</p>
+            </div>
+            <div class="service-card bg-gray-100 dark:bg-gray-700 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300">
+                <h3 class="text-2xl font-bold mb-3">Data Integration & Interoperability</h3>
+                <p class="text-gray-600 dark:text-gray-300">Robust support for structured CSV metadata, clinical tagging, and export-ready research formats. Seamlessly integrate with existing hospital systems.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
-        <section id="continuous-improvement">
-            <h2>Advancements</h2>
-            <p>At samRad Health Technologies, our mission centers on **precision**&mdash;a quality vividly demonstrated in this radiation beam simulation. The gantry, the rotating arm of a radiation machine, precisely delivers a targeted beam to the tumor, minimizing exposure to healthy tissue. This animation highlights the **crucial role of accurate targeting** in modern cancer treatment and is a core example of the advancements we are working to bring to cancer care.</p>
-        </section>
+<section id="continuous-improvement" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md mt-8">
+    <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-4xl font-extrabold mb-6">Advancements</h2>
+        <p class="text-lg leading-relaxed mx-auto">At samRad Health Technologies, our mission centers on <strong>precision</strong>&mdash;a quality vividly demonstrated in this radiation beam simulation. The gantry, the rotating arm of a radiation machine, precisely delivers a targeted beam to the tumor, minimizing exposure to healthy tissue. This animation highlights the <strong>crucial role of accurate targeting</strong> in modern cancer treatment and is a core example of the advancements we are working to bring to cancer care.</p>
+    </div>
+</section>
 
-        <section id="certifications">
-            <h2>Certifications & Research Ethics</h2>
-            <ul>
-                <li>Fully compliant with **HIPAA** data handling protocols to ensure patient data privacy and security.</li>
-                <li>Model validation on ethically sourced, anonymized datasets to maintain integrity and prevent bias.</li>
-                <li>Strict adherence to **IRB** (Institutional Review Board) and institutional ethics review processes for all research and development.</li>
-            </ul>
-        </section>
+<section id="certifications" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900 rounded-lg shadow-md mt-8">
+    <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-4xl font-extrabold mb-8">Certifications & Research Ethics</h2>
+        <ul class="space-y-4 text-left max-w-2xl mx-auto">
+            <li class="text-lg">Fully compliant with <strong>HIPAA</strong> data handling protocols to ensure patient data privacy and security.</li>
+            <li class="text-lg">Model validation on ethically sourced, anonymized datasets to maintain integrity and prevent bias.</li>
+            <li class="text-lg">Strict adherence to <strong>IRB</strong> (Institutional Review Board) and institutional ethics review processes for all research and development.</li>
+        </ul>
+    </div>
+</section>
 
-        <section id="quiz">
-            <h2>Imaging and Quiz</h2>
-            <p>Medical imaging—like MRI, CT, and PET scans—is often the first step in diagnosing and treating cancer. These tools guide decisions and shape care, but many people don’t fully understand what they are or how they work.</p>
+<section id="quiz" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md mt-8">
+    <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-4xl font-extrabold mb-6">Imaging and Quiz</h2>
+        <p class="text-lg leading-relaxed mb-4">Medical imaging&mdash;like MRI, CT, and PET scans&mdash;is often the first step in diagnosing and treating cancer. These tools guide decisions and shape care, but many people don’t fully understand what they are or how they work.</p>
 
-            <p>Early detection is especially critical for cancers like breast cancer, prostate cancer, and glioblastoma. Catching these diseases in their earliest stages can significantly improve treatment options, reduce the need for aggressive interventions, and boost survival rates.</p>
+        <p class="text-lg leading-relaxed mb-4">Early detection is especially critical for cancers like breast cancer, prostate cancer, and glioblastoma. Catching these diseases in their earliest stages can significantly improve treatment options, reduce the need for aggressive interventions, and boost survival rates.</p>
 
-            <p>At <strong>samRad Health Technologies</strong>, we’re developing software that helps detect tumors directly from medical images (DICOM files)—making diagnosis faster, earlier, and more accessible. Our goal is to support timely intervention, enable emerging treatment modalities, and ultimately improve patient outcomes.</p>
+        <p class="text-lg leading-relaxed mb-4">At <strong>samRad Health Technologies</strong>, we’re developing software that helps detect tumors directly from medical images (DICOM files)&mdash;making diagnosis faster, earlier, and more accessible. Our goal is to support timely intervention, enable emerging treatment modalities, and ultimately improve patient outcomes.</p>
 
-            <p>Being informed can reduce fear, improve communication with your care team, and help you make confident choices.</p>
+        <p class="text-lg leading-relaxed mb-4">Being informed can reduce fear, improve communication with your care team, and help you make confident choices.</p>
 
-            <p><strong>Take the quiz to learn the basics and better navigate your health journey.</strong></p>
+        <p class="text-lg leading-relaxed mb-4"><strong>Take the quiz to learn the basics and better navigate your health journey.</strong></p>
 
+        <button id="start-quiz-btn" class="mt-8 px-8 py-4 bg-blue-600 text-white font-bold rounded-full shadow-lg hover:bg-blue-700 transition duration-300 ease-in-out transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-blue-300">Start Quiz</button>
+        <div id="quiz-form" class="mt-4"></div>
+        <div id="quiz-result" class="mt-4"></div>
+    </div>
+</section>
 
-            <button id="start-quiz-btn">Start Quiz</button>
-            <div id="quiz-form"></div>
-            <div id="quiz-result"></div>
-        </section>
+<div id="radiation-animation" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900 rounded-lg shadow-md mt-8">
+    <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-4xl font-extrabold mb-6">Radiation Beam Simulation</h2>
+        <p class="text-lg leading-relaxed mx-auto">At samRad Health Technologies, our mission centers on <strong>precision</strong>&mdash;a quality vividly demonstrated in this radiation beam simulation. The gantry, the rotating arm of a radiation machine, precisely delivers a targeted beam to the tumor, minimizing exposure to healthy tissue. This animation highlights the <strong>crucial role of accurate targeting</strong> in modern cancer treatment and is a core example of the advancements we are working to bring to cancer care.</p>
+    </div>
+</div>
 
-        <div id="radiation-animation">
-            <h2>Radiation Beam Simulation</h2>
-            <p>At samRad Health Technologies, our mission centers on **precision**&mdash;a quality vividly demonstrated in this radiation beam simulation. The gantry, the rotating arm of a radiation machine, precisely delivers a targeted beam to the tumor, minimizing exposure to healthy tissue. This animation highlights the **crucial role of accurate targeting** in modern cancer treatment and is a core example of the advancements we are working to bring to cancer care.</p>
-            
             <div id="animation-container-horizontal">
                 <div class="gantry-circle">
                     <div class="gantry-head"></div>
