--- a/index.html
+++ b/index.html
@@ -466,21 +466,11 @@
     </header>
 
     <div class="container">
-       <section id="about" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md">
+         <section id="about" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md">
     <div class="max-w-4xl mx-auto text-center">
         <h2 class="text-4xl font-extrabold mb-6">About Us</h2>
         <p class="text-lg leading-relaxed mb-4">samRad Health Technologies is a visionary cancer research and healthtech enterprise. Our mission is to pioneer intelligent, automated systems that empower clinicians to detect and quantify tumors from radiological imaging with precision and ease. Our AI pipelines are open, transparent, and designed to speed up diagnostics and enhance medical research.</p>
-        <p class="text-lg leading-relaxed mb-4">Founded by <strong>Founder First Name</strong> B. <strong>Founder Last Name</strong>, a Zimbabwean PhD student in Physics at the University of NH in the United States, the initiative is rooted in a passion for oncology and a heartfelt commitment to expanding access to care. Coming from a background marked by economic hardship and limited access to advanced healthcare, <strong>Founder Last Name</strong> has firsthand experience of the challenges faced by most African communities.</p>
-        <p class="text-lg leading-relaxed mb-4">Through resilience and a relentless pursuit of education, he now seeks to transform lives&mdash;not just through innovation, but by creating pathways for others from similar circumstances. samRad Health Technologies aspires to forge partnerships with hospitals across Zimbabwe and Southern Africa, uplifting cancer care through technological excellence and shared knowledge.</p>
-    </div>
-</section>
-
-
-        <section id="about" class="py-16 px-4 sm:px-6 lg:px-8 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-md">
-    <div class="max-w-4xl mx-auto text-center">
-        <h2 class="text-4xl font-extrabold mb-6">About Us</h2>
-        <p class="text-lg leading-relaxed mb-4">samRad Health Technologies is a visionary cancer research and healthtech enterprise. Our mission is to pioneer intelligent, automated systems that empower clinicians to detect and quantify tumors from radiological imaging with precision and ease. Our AI pipelines are open, transparent, and designed to speed up diagnostics and enhance medical research.</p>
-        <p class="text-lg leading-relaxed mb-4">Founded by <strong>Founder First Name</strong> B. <strong>Founder Last Name</strong>, a Zimbabwean PhD student in Physics at the University of NH in the United States, the initiative is rooted in a passion for oncology and a heartfelt commitment to expanding access to care. Coming from a background marked by economic hardship and limited access to advanced healthcare, <strong>Founder Last Name</strong> has firsthand experience of the challenges faced by most African communities.</p>
+        <p class="text-lg leading-relaxed mb-4">Founded by <strong>Samuel</strong> B. <strong>Takwirira/strong>, a Zimbabwean PhD student in Physics at the University of New Hampshire in the United States, the initiative is rooted in a passion for oncology and a heartfelt commitment to expanding access to care. Coming from a background marked by economic hardship and limited access to advanced healthcare, <strong>Takwirira</strong> has firsthand experience of the challenges faced by most African communities.</p>
         <p class="text-lg leading-relaxed mb-4">Through resilience and a relentless pursuit of education, he now seeks to transform lives&mdash;not just through innovation, but by creating pathways for others from similar circumstances. samRad Health Technologies aspires to forge partnerships with hospitals across Zimbabwe and Southern Africa, uplifting cancer care through technological excellence and shared knowledge.</p>
     </div>
 </section>
@@ -577,8 +567,8 @@
         </div>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>Email: <a href="mailto:****@proton.me">****@proton.me</a></p>
-            <p>GitHub: <a href="https://****25.github.io/samRad-Health-Technologies/" target="_blank" rel="noopener noreferrer">https://****25.github.io/samRad-Health-Technologies/</a></p>
+            <p>Email: <a href="mailto:takwirira@proton.me">takwirira@proton.me</a></p>
+            <p>GitHub: <a href="https://takwirira25.github.io/samRad-Health-Technologies/" target="_blank" rel="noopener noreferrer">https://takwirira25.github.io/samRad-Health-Technologies/</a></p>
         </section>
     </div>
 
