--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>samRad Health Technologies</title>
     <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600;700&display=Cursive" rel="stylesheet">
+        <meta name="description" content="Visionary projects to advance cancer detection mechanisms">
+<meta name="keywords" content="samrad, health, technologies">
+<meta name="robots" content="index, follow">
+<title>samRad Health Technologies</title>
     <style>
         /* Base Styles */
         body {
